Add browser (GWT) build and Render static-site deploy